qtwebsockets-opensource-src (5.12.3-2) UNRELEASED; urgency=medium

  [ Scarlett Moore ]
  * Improve abstract for doc-base.

  [ Dmitry Shachnev ]
  * Set the TESTRUNNER environment variable when running the tests, instead
    of calling xvfb-run directly. This fixes build with nocheck profile
    (closes: #929442). Thanks to Sven Mueller for the initial patch!

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 29 May 2019 18:30:02 +0300

qtwebsockets-opensource-src (5.12.3-1) experimental; urgency=medium

  [ Scarlett Moore ]
  * Update packaging to use doc-base as per policy 9.10.
 
  [ Dmitry Shachnev ]
  * New upstream release.
  * Bump Qt build-dependencies to 5.12.3.
  * Update Homepage URL.

 -- Dmitry Shachnev <mitya57@debian.org>  Mon, 22 Apr 2019 13:15:37 +0300

qtwebsockets-opensource-src (5.12.2-1) experimental; urgency=medium

  * New upstream release.
  * Bump Qt build-dependencies to 5.12.2.
  * Update debian/libqt5websockets5.symbols from the current build log.
  * Drop skip_test_failing_on_chroots.patch, the issue was fixed upstream.

 -- Dmitry Shachnev <mitya57@debian.org>  Sat, 23 Mar 2019 14:39:31 +0300

qtwebsockets-opensource-src (5.11.3-5) unstable; urgency=medium

  * Ignore test failure in mips64el to allow the Qt transition to continue.
    The code has not changed and built before without problems, so we suspect
    the issue must probably be somewhere else.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Fri, 28 Dec 2018 15:33:30 -0300

qtwebsockets-opensource-src (5.11.3-4) unstable; urgency=medium

  [ Simon Quigley ]
  * Change my email to tsimonq2@debian.org now that I am a Debian Developer.
  * Bump Standards-version to 4.3.0, no changes needed.

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Upload to unstable.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Wed, 26 Dec 2018 16:27:00 -0300

qtwebsockets-opensource-src (5.11.3-3) experimental; urgency=medium
