@@ -11,11 +11,6 @@ export QT_SELECT := qt5
 %:
 	dh $@ --with pkgkde_symbolshelper
 
-override_dh_auto_clean:
-	dh_auto_clean
-	rm -rfv doc lib mkspecs test_root
-	rm -fv include/QtWebSockets/QtWebSocketsDepends
-
 override_dh_auto_configure:
 	dh_auto_configure -- QT_BUILD_PARTS+=tests
 
